--- a/init.org
+++ b/init.org
@@ -96,6 +96,8 @@ I mainly run this with my nix dotfiles, you can view those [[https://github.com/
   - [[#evil-nerd-commenter][Evil Nerd Commenter]]
   - [[#flycheck][Flycheck]]
   - [[#eglot][Eglot]]
+  - [[#eldoc][Eldoc]]
+  - [[#eldoc-mouse][Eldoc Mouse]]
   - [[#just][Just]]
   - [[#python][Python]]
   - [[#java][Java]]
@@ -1342,6 +1344,20 @@ The following code is taken from Lars Tveito
      (local-set-key (kbd "C-c C-c") 'compile))
    #+end_src
 
+** Eldoc
+   #+begin_src emacs-lisp
+   (use-package eldoc
+     :ensure nil
+     :config
+     (global-eldoc-mode))
+   #+end_src
+** Eldoc Mouse
+#+begin_src emacs-lisp
+(use-package eldoc-mouse
+  :bind (:map eldoc-mouse-mode-map
+              ("C-h ." . eldoc-mouse-pop-doc-at-cursor))
+  :hook eglot-managed-mode)
+#+end_src
 ** Just
    #+begin_src emacs-lisp
    (use-package just-mode)
